--- a/conf/kafka/server.properties
+++ b/conf/kafka/server.properties
@@ -59,7 +59,7 @@ socket.request.max.bytes=104857600
 ############################# Log Basics #############################
 
 # A comma separated list of directories under which to store log files
-log.dirs=/root/kafka/data/kafka
+log.dirs=/root/kafka/data
 delete.topic.enable=true
 
 # The default number of log partitions per topic. More partitions allow greater
