--- a/conf/kafka/zookeeper.properties
+++ b/conf/kafka/zookeeper.properties
@@ -13,11 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 # the directory where the snapshot is stored.
-dataDir=/root/kafka/data/zookeeper
+dataDir=/root/kafka/zookeeper
 # the port at which the clients will connect
 clientPort=2181
 # disable the per-ip limit on the number of connections since this is a non-production config
 maxClientCnxns=0
+tickTime=2000
+initLimit=5
+syncLimit=2
 # Disable the adminserver by default to avoid port conflicts.
 # Set the port to something non-conflicting if choosing to enable this
 admin.enableServer=false
@@ -26,4 +29,5 @@ server.1=mykafka1:2888:3888
 server.2=mykafka2:2888:3888
 server.3=mykafka3:2888:3888
 4lw.commands.whitelist=*
+
 
