--- a/temp-state.yaml
+++ b/temp-state.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: mykafka
-          image: mykafka
+          image: gnswp21/mykafka_k8s:latest
           ports:
             - containerPort: 9092
               name: broker
