--- a/temp-state.yaml
+++ b/temp-state.yaml
@@ -19,4 +19,6 @@ spec:
           ports:
             - containerPort: 9092
               name: broker
+          command: [ "/bin/sh" ]
+          args: [ "-c", "tail -f /dev/null" ]
 
