--- a/conf/kafka/zookeeper.properties
+++ b/conf/kafka/zookeeper.properties
@@ -25,9 +25,9 @@ syncLimit=2
 # Set the port to something non-conflicting if choosing to enable this
 admin.enableServer=false
 # admin.serverPort=8080
-server.1=mykafka1:2888:3888
-server.2=mykafka2:2888:3888
-server.3=mykafka3:2888:3888
+server.1=kafka-0.kafka-svc-domain.default.svc.cluster.local:2888:3888
+server.2=kafka-1.kafka-svc-domain.default.svc.cluster.local:2888:3888
+server.3=kafka-2.kafka-svc-domain.default.svc.cluster.local:2888:3888
 4lw.commands.whitelist=*
 
 
