--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,11 @@ services:
     container_name: mykafka1
     networks:
       KafkaClusterPractice:
+    ports:
+      - 9092:9092
+    environment:
+      - KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      - KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka1:9092,EXTERNAL://43.203.166.170:9092
     volumes:
       - zookeeper_data_1:/root/kafka/zookeeper
       - kafka_data_1:/root/kafka/data
@@ -14,6 +19,9 @@ services:
     container_name: mykafka2
     networks:
       KafkaClusterPractice:
+    environment:
+      - KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      - KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka2:9092,EXTERNAL://43.203.166.170:9092
     volumes:
       - zookeeper_data_2:/root/kafka/zookeeper
       - kafka_data_2:/root/kafka/data
@@ -24,6 +32,9 @@ services:
     container_name: mykafka3
     networks:
       KafkaClusterPractice:
+    environment:
+      - KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      - KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka3:9092,EXTERNAL://43.203.166.170:9092
     volumes:
       - zookeeper_data_3:/root/kafka/zookeeper
       - kafka_data_3:/root/kafka/data
