--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - 9092:9092
     environment:
-      - KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      - KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka1:9092,EXTERNAL://43.203.166.170:9092
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka1:9092,EXTERNAL://43.203.166.170:9092
     volumes:
       - zookeeper_data_1:/root/kafka/zookeeper
       - kafka_data_1:/root/kafka/data
@@ -20,8 +20,8 @@ services:
     networks:
       KafkaClusterPractice:
     environment:
-      - KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      - KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka2:9092,EXTERNAL://43.203.166.170:9092
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka2:9092,EXTERNAL://43.203.166.170:9092
     volumes:
       - zookeeper_data_2:/root/kafka/zookeeper
       - kafka_data_2:/root/kafka/data
@@ -33,8 +33,8 @@ services:
     networks:
       KafkaClusterPractice:
     environment:
-      - KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      - KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka3:9092,EXTERNAL://43.203.166.170:9092
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka3:9092,EXTERNAL://43.203.166.170:9092
     volumes:
       - zookeeper_data_3:/root/kafka/zookeeper
       - kafka_data_3:/root/kafka/data
