--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,95 @@
+version: '2'
 services:
-  mykafka1:
-    image: mykafka
-    container_name: mykafka1
-    networks:
-      KafkaClusterPractice:
+  zookeeper-1:
+    image: confluentinc/cp-zookeeper:latest
+    hostname: zookeeper-1
     ports:
-      - 9092:9092
+      - "12181:12181"
     environment:
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka1:9092,EXTERNAL://43.203.166.170:9092
-    volumes:
-      - zookeeper_data_1:/root/kafka/zookeeper
-      - kafka_data_1:/root/kafka/data
-      - kafka_log_1:/root/kafka/logs
-    command: [ "sh", "-c", "service ssh start; tail -f /dev/null" ]
-  mykafka2:
-    image: mykafka
-    container_name: mykafka2
-    networks:
-      KafkaClusterPractice:
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_CLIENT_PORT: 12181
+      ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_INIT_LIMIT: 5
+      ZOOKEEPER_SYNC_LIMIT: 2
+      ZOOKEEPER_SERVERS: zookeeper-1:12888:13888;zookeeper-2:22888:23888;zookeeper-3:32888:33888
+
+  zookeeper-2:
+    image: confluentinc/cp-zookeeper:latest
+    hostname: zookeeper-2
+    ports:
+      - "22181:12181"
     environment:
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka2:9092,EXTERNAL://43.203.166.170:9092
-    volumes:
-      - zookeeper_data_2:/root/kafka/zookeeper
-      - kafka_data_2:/root/kafka/data
-      - kafka_log_2:/root/kafka/logs
-    command: [ "sh", "-c", "service ssh start; tail -f /dev/null" ]
-  mykafka3:
-    image: mykafka
-    container_name: mykafka3
-    networks:
-      KafkaClusterPractice:
+      ZOOKEEPER_SERVER_ID: 2
+      ZOOKEEPER_CLIENT_PORT: 12181
+      ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_INIT_LIMIT: 5
+      ZOOKEEPER_SYNC_LIMIT: 2
+      ZOOKEEPER_SERVERS: zookeeper-1:12888:13888;zookeeper-2:22888:23888;zookeeper-3:32888:33888
+
+  zookeeper-3:
+    image: confluentinc/cp-zookeeper:latest
+    hostname: zookeeper-3
+    ports:
+      - "32181:12181"
     environment:
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka3:9092,EXTERNAL://43.203.166.170:9092
-    volumes:
-      - zookeeper_data_3:/root/kafka/zookeeper
-      - kafka_data_3:/root/kafka/data
-      - kafka_log_3:/root/kafka/logs
-    command: [ "sh", "-c", "service ssh start; tail -f /dev/null" ]
+      ZOOKEEPER_SERVER_ID: 3
+      ZOOKEEPER_CLIENT_PORT: 12181
+      ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_INIT_LIMIT: 5
+      ZOOKEEPER_SYNC_LIMIT: 2
+      ZOOKEEPER_SERVERS: zookeeper-1:12888:13888;zookeeper-2:22888:23888;zookeeper-3:32888:33888
 
-volumes:
-  zookeeper_data_1:
-  kafka_data_1:
-  kafka_log_1:
-  zookeeper_data_2:
-  kafka_data_2:
-  kafka_log_2:
-  zookeeper_data_3:
-  kafka_data_3:
-  kafka_log_3:
+  kafkacat:
+    image: confluentinc/cp-kafkacat
+    command: sleep infinity
 
+  kafka-1:
+    image: confluentinc/cp-kafka:latest
+    ports:
+      - "19092:19092"
+      - "19094:19094"
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:12181,zookeeper-2:12181,zookeeper-3:12181
+      KAFKA_LISTENERS: INTERNAL://kafka-1:19092,EXTERNAL://kafka-1:19094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:19092,EXTERNAL://localhost:19094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
 
-networks:
-  KafkaClusterPractice:
+  kafka-2:
+    image: confluentinc/cp-kafka:latest
+    ports:
+      - "29092:29092"
+      - "29094:29094"
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:12181,zookeeper-2:12181,zookeeper-3:12181
+      KAFKA_LISTENERS: INTERNAL://kafka-2:29092,EXTERNAL://kafka-2:29094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-2:29092,EXTERNAL://localhost:29094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+
+  kafka-3:
+    image: confluentinc/cp-kafka:latest
+    ports:
+      - "39092:39092"
+      - "39094:39094"
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
+    environment:
+      KAFKA_BROKER_ID: 3
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:12181,zookeeper-2:12181,zookeeper-3:12181
+      KAFKA_LISTENERS: INTERNAL://kafka-3:39092,EXTERNAL://kafka-3:39094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-3:39092,EXTERNAL://localhost:39094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
