--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     networks:
       KafkaClusterPractice:
     ports:
-      - 9092:9092
+      - 19094:19094
     environment:
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka1:9092,EXTERNAL://43.203.166.170:9092
+      KAFKA_LISTENERS: INTERNAL://:9092,EXTERNAL://:19094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://mykafka1:9092,EXTERNAL://43.203.166.170:19094
     volumes:
       - zookeeper_data_1:/root/kafka/zookeeper
       - kafka_data_1:/root/kafka/data
@@ -19,9 +19,11 @@ services:
     container_name: mykafka2
     networks:
       KafkaClusterPractice:
+    ports:
+      - 29094:29094
     environment:
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka2:9092,EXTERNAL://43.203.166.170:9092
+      KAFKA_LISTENERS: INTERNAL://:9092,EXTERNAL://:29094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://mykafka1:9092,EXTERNAL://43.203.166.170:29094
     volumes:
       - zookeeper_data_2:/root/kafka/zookeeper
       - kafka_data_2:/root/kafka/data
@@ -32,9 +34,11 @@ services:
     container_name: mykafka3
     networks:
       KafkaClusterPractice:
+    ports:
+      - 39094:39094
     environment:
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://mykafka3:9092,EXTERNAL://43.203.166.170:9092
+      KAFKA_LISTENERS: INTERNAL://:9092,EXTERNAL://:39094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://mykafka1:9092,EXTERNAL://43.203.166.170:39094
     volumes:
       - zookeeper_data_3:/root/kafka/zookeeper
       - kafka_data_3:/root/kafka/data
