--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,13 @@ services:
       KafkaClusterPractice:
     ports:
       - 19094:19094
+      - 9092:9092
       - 80:80
     environment:
       KAFKA_LISTENERS: INTERNAL://mykafka1:9092,EXTERNAL://mykafka1:19094
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://mykafka1:9092,EXTERNAL://localhost:19094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
     volumes:
       - zookeeper_data_1:/root/kafka/zookeeper
       - kafka_data_1:/root/kafka/data
