--- a/conf/kafka/server.properties
+++ b/conf/kafka/server.properties
@@ -59,7 +59,6 @@ socket.request.max.bytes=104857600
 ############################# Log Basics #############################
 
 # A comma separated list of directories under which to store log files
-log.dirs=/root/kafka/data
 delete.topic.enable=true
 
 # The default number of log partitions per topic. More partitions allow greater
@@ -123,7 +122,6 @@ log.retention.check.interval.ms=300000
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
-zookeeper.connect=mykafka1:2181,mykafka2:2181,mykafka3:2181
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=18000
@@ -137,3 +135,12 @@ zookeeper.connection.timeout.ms=18000
 # We override this to 0 here as it makes for a better out-of-the-box experience for development and testing.
 # However, in production environments the default value of 3 seconds is more suitable as this will help to avoid unnecessary, and potentially expensive, rebalances during application startup.
 group.initial.rebalance.delay.ms=0
+
+
+#broker.id=${KAFKA_BROKER_ID}
+#zookeeper.connect=${KAFKA_ZOOKEEPER_CONNECT}
+#listeners=${KAFKA_LISTENERS}
+#advertised.listeners=${KAFKA_ADVERTISED_LISTENERS}
+#listener.security.protocol.map=${KAFKA_LISTENER_SECURITY_PROTOCOL_MAP}
+#inter.broker.listener.name=${KAFKA_INTER_BROKER_LISTENER_NAME}
+#log.dirs=${KAFKA_LOG_DIRS}
