--- a/conf/kafka/server.properties
+++ b/conf/kafka/server.properties
@@ -137,10 +137,10 @@ zookeeper.connection.timeout.ms=18000
 group.initial.rebalance.delay.ms=0
 
 
-#broker.id=${KAFKA_BROKER_ID}
-#zookeeper.connect=${KAFKA_ZOOKEEPER_CONNECT}
-#listeners=${KAFKA_LISTENERS}
-#advertised.listeners=${KAFKA_ADVERTISED_LISTENERS}
-#listener.security.protocol.map=${KAFKA_LISTENER_SECURITY_PROTOCOL_MAP}
-#inter.broker.listener.name=${KAFKA_INTER_BROKER_LISTENER_NAME}
-#log.dirs=${KAFKA_LOG_DIRS}
+broker.id=${KAFKA_BROKER_ID}
+zookeeper.connect=${KAFKA_ZOOKEEPER_CONNECT}
+listeners=${KAFKA_LISTENERS}
+advertised.listeners=${KAFKA_ADVERTISED_LISTENERS}
+listener.security.protocol.map=${KAFKA_LISTENER_SECURITY_PROTOCOL_MAP}
+inter.broker.listener.name=${KAFKA_INTER_BROKER_LISTENER_NAME}
+log.dirs=${KAFKA_LOG_DIRS}
